# spear-physics

./: .gitignore  CMakeLists.txt  LICENSE  README.md  spear_config.h.in
include/spear/: spear.hpp  spear_math.h  spear_math.hpp
src/: MatAccumProxy.cpp  MatAccumProxy.hpp  Matrix3.hpp  Matrix4.h  Matrix4.hpp  Vector3.hpp  Vector4.h  core.hpp  experimentMath.cpp  experimentMath.hpp  precision.h  spear.cpp  spear_config.h
